--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,14 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: card-management
+
   datasource:
     url: jdbc:mysql://localhost:3206/cards_db
     username: admin
     password: sB6mbtzNHmCQI4eN4yLo
     driverClassName: com.mysql.cj.jdbc.Driver
-
-  kafka:
-    bootstrap-servers: localhost:9093, localhost:9094, localhost:9095
 
   flyway:
     enabled: true
@@ -21,6 +21,20 @@ spring:
     hibernate:
       ddl-auto: none
 
+  kafka:
+    bootstrap-servers: localhost:9093, localhost:9094, localhost:9095
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
+
   jackson:
     mapper:
       accept-case-insensitive-enums: true
@@ -30,3 +44,7 @@ spring:
     sql: info
     web: info
 
+app:
+  kafka:
+    card-application-topic: card-application
+    card-application-group-id: card-application
