--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -14,6 +14,7 @@ on:
   pull_request:
     branches: [ "main" ]
 
+
 jobs:
   build:
 
@@ -27,8 +28,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn verify
+    - name: Build / Unit tests
+      run: mvn test
+    - name: Integration tests
+      run: mvn failsafe:integration-test
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
