--- a/.github/workflows/nightly-pipeline.yml
+++ b/.github/workflows/nightly-pipeline.yml
@@ -10,8 +10,7 @@ name: Cards Management - Nightly CI pipeline
 
 on:
   schedule:
-    - cron: '0 * * * *'
-
+    - cron: '* * * * *'
 
 jobs:
   build:
