--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -16,19 +16,29 @@ on:
 
 jobs:
   build:
-    name: Build and Run Tests
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'corretto'
           cache: maven
-      - name: Build and Run Tests
-        run: mvn test --batch-mode --fail-at-end
-      - name: Publish Test Report
+      - name: Build / Unit tests
+        run: mvn -B test
+      - name: 23232
+        uses: dorny/test-reporter@v1
         if: success() || failure()
-        uses: scacap/action-surefire-report@v1
+        with:
+          name: Test Results
+          path: ${{ github.workspace }}/target/surefire-reports/TEST-TestSuite.xml
+          reporter: java-junit
+          java-version: 17
+
+
+
+
+
