--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -15,9 +15,10 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
 
+  build:
     runs-on: ubuntu-latest
+    timeout-minutes: 1
 
     steps:
       - uses: actions/checkout@v3
@@ -29,14 +30,6 @@ jobs:
           cache: maven
       - name: Build / Unit tests
         run: mvn -B test
-      - name: 23232
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Test Results
-          path: ${{ github.workspace }}/target/surefire-reports/TEST-TestSuite.xml
-          reporter: java-junit
-          java-version: 17
 
 
 
