--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -18,7 +18,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 1
+    timeout-seconds: 15
 
     steps:
       - uses: actions/checkout@v3
