Adding Test Report Feature to CI pipeline

--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -28,8 +28,11 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
           cache: maven
-      - name: Build / Unit tests
-        run: mvn -B test
+      - name: Build and Run Tests
+        run: mvn test --batch-mode --fail-at-end
+      - name: Publish Test Report
+        if: success() || failure()
+        uses: scacap/action-surefire-report@v1
 
 
 
