--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -19,6 +19,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 3
+    permissions: write-all
 
     steps:
       - uses: actions/checkout@v3
