--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -35,13 +35,21 @@ jobs:
         uses: dorny/test-reporter@v1.5.0
         if: always()
         with:
-          name: Maven Tests
           path: "**/surefire-reports/TEST-*.xml"
           reporter: java-junit
 
       - name: Publish Test Report
         if: success() || failure()
         uses: scacap/action-surefire-report@v1
+
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Test Results
+          path: ${{ github.workspace }}/target/surefire-reports/TEST-TestSuite.xml
+          reporter: java-junit
+          java-version: 17
 
 
 
