--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -36,6 +36,17 @@ jobs:
         if: success() || failure()
         uses: scacap/action-surefire-report@v1
 
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Test Results 2
+          path: ${{ github.workspace }}/target/surefire-reports/TEST-TestSuite.xml
+          reporter: java-junit
+          java-version: 17
+          fail-on-error: true
+
+
 
 
 
