--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -35,11 +35,13 @@ jobs:
       - name: Publish Test Report
         if: success() || failure()
         uses: scacap/action-surefire-report@v1
+        fail-on-error: false
 
       - name: Publish Test Report 2
         uses: scacap/action-surefire-report@bc71e9d0f892826ec4cd14db336bd115ddfcb1c8
         with:
           report_paths: '**/surefire-reports/**/TEST-*.xml'
+          fail-on-error: false
 
 
 
