--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -32,10 +32,9 @@ jobs:
       - name: Build and Run Tests
         run: mvn test --batch-mode --fail-at-end
 
-      - name: Publish Test Report
-        if: success() || failure()
-        uses: scacap/action-surefire-report@v1
-        fail-on-error: false
+#      - name: Publish Test Report
+#        if: success() || failure()
+#        uses: scacap/action-surefire-report@v1
 
       - name: Publish Test Report 2
         uses: scacap/action-surefire-report@bc71e9d0f892826ec4cd14db336bd115ddfcb1c8
