--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -29,17 +29,10 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
           cache: maven
+
       - name: Build and Run Tests
         run: mvn test --batch-mode --fail-at-end
 
-#      - name: Publish Test Report
-#        if: success() || failure()
-#        uses: scacap/action-surefire-report@v1
-
-      - name: Publish Test Report 2
-        uses: scacap/action-surefire-report@bc71e9d0f892826ec4cd14db336bd115ddfcb1c8
-        with:
-          report_paths: '**/surefire-reports/**/TEST-*.xml'
-
-
-
+      - name: Publish Test Report
+        if: success() || failure()
+        uses: scacap/action-surefire-report@v1
