--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Build and Run Tests
         run: mvn test --batch-mode --fail-at-end
 
-      - name: Publish Test Report
+      - name: Test Report
         if: success() || failure()
         uses: scacap/action-surefire-report@v1
