--- a/.github/workflows/nightly-pipeline.yml
+++ b/.github/workflows/nightly-pipeline.yml
@@ -10,7 +10,7 @@ name: Cards Management - Nightly CI pipeline
 
 on:
   schedule:
-    - cron: '0,5,10 * * * *'
+    - cron: '* * * * *'
 
 jobs:
   build:
