--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8080
+  port: 8082
 
 spring:
   application:
     name: card-management
 
   datasource:
-    url: jdbc:mysql://localhost:3206/cards_db
+    url: jdbc:mysql://localhost:23306/cards_db
     username: admin
     password: sB6mbtzNHmCQI4eN4yLo
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -22,10 +22,7 @@ spring:
       ddl-auto: none
 
   kafka:
-    bootstrap-servers: localhost:9093, localhost:9094, localhost:9095
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    bootstrap-servers: localhost:9093
     consumer:
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
