--- a/pom.xml
+++ b/pom.xml
@@ -177,9 +177,9 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-sns</artifactId>
-			<version>1.12.523</version>
+			<groupId>com.agorapulse</groupId>
+			<artifactId>micronaut-amazon-awssdk-sqs</artifactId>
+			<version>2.1.6-micronaut-3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
